<resources>

    <string name="app_name">My Login</string>
    <string name="menu_settings">Settings</string>
    <string name="title_askmeshowme">My Login AskMeShowMe</string>
    <string name="title_showme">My Login ShowMe</string>
    <string name="title_animation">ListView animation Mobile Lab 5</string>

    <string name="mr">Hello</string>
    <string name="ms">Hi</string>

    <string name="first_name">First Name: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <string name="status_bar_notifications_icons_and_marquee">Icons and marquee</string>

    <string name="marquee_default">This use the default marquee animation limit of 3</string>
    <string name="marquee_once">This will run the marquee animation once</string>
    <string name="marquee_forever">Watch Me !!! Do not forget to enter your credentials all the time.</string>
    <string name="marquee_string">Watch Me !!!! This is a nice and simple demo of a MARQUEE TextView control in Android. Nice to watch...</string>

    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>

    <string name="prefs_title">Preferences...</string>

    <string name="hints_title">Hints</string>
    <string name="hints_summary">Short memory aid.</string>
    <string name="video_title">Video....DacingLadyBugs</string>
    <string name="video_summary">Nice and Simple Video Clip ran from the Linux File System.</string>

    <string name="about_title">About...</string>
<string name="about_text">\
MobileAnimations is a nice and simple Android Application
that allows a user experience 2D animations from Android. 
</string>

    <string name="mywebsite">http://www.google.com</string>
    <string name="myemail">mytest@nowhere.com</string>
    <string name="myphone">4165555555</string>

    <string name="submit_label">Submit</string>

</resources>
