<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RadioGroup android:id="@+id/greetingsRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:padding="5dip"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/mrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_gravity="left"
            android:focusable="false"
            android:text="@string/mr">

        </RadioButton>
        <RadioButton android:id="@+id/msButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_gravity="left"
            android:focusable="false"
            android:text="@string/ms">
        </RadioButton>
    </RadioGroup>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text"
                android:minWidth="80dp"
                android:maxWidth="80dp"
                android:padding="15dip"
                android:singleLine="true" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text"
                android:minWidth="80dp"
                android:maxWidth="80dp"
                android:padding="15dip"
                android:singleLine="true" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_label" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/txt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="#00FF00"
        android:text="@string/marquee_string" />
</LinearLayout>
